adicionei alguns icons mas não os arrumei

--- a/site/style/style.css
+++ b/site/style/style.css
@@ -75,15 +75,17 @@ a {
 }
 
 /*Container de Informações*/
-#cont-inform {
+.cont-inform {
     min-width: 100%;
     background-color: bisque;
     justify-content: center;
 }
 
-.ul-cont-inform {
-    display: flex;
-    justify-content: center;
+.col-cont-inform{
+    
+}
+.icon-cont-inform {
+    position: relative;
 }
 
 .li-cont-inform {
