--- a/site/style/style.css
+++ b/site/style/style.css
@@ -48,7 +48,7 @@ a {
     padding: 7px 7px;
 }
 
-/*Navbar*/
+/*Links iniciais*/
 .li-nav {
     padding-right: 20px;
 }
@@ -81,9 +81,6 @@ a {
     justify-content: center;
 }
 
-.col-cont-inform{
-    
-}
 .icon-cont-inform {
     position: relative;
 }
